apps/prod/hello/web/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-web
  labels:
    app.kubernetes.io/name: hello-web
    app.kubernetes.io/part-of: hello
    talay.io/environment: prod
spec:
  ingressClassName: traefik
  tls:
    - secretName: hello-web-tls
      hosts:
        - hello.cantalay.com
  rules:
    - host: hello.cantalay.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-web
                port:
                  number: 80
